# cassetta

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/actions/test/: action.yaml
.github/workflows/: test-on-pr.yaml
cassetta/: __init__.py  _version.py
cassetta/.github/workflows/: test-and-publish.yaml  test-on-pr.yaml
cassetta/backbones/: README.md  __init__.py  atrous.py  fcn.py  unet.py
cassetta/core/: README.md  __init__.py  doc.py  typing.py  utils.py
cassetta/datasets/: __init__.py  supervised.py
cassetta/functional/: README.md  __init__.py
cassetta/functional/jit/: __init__.py  indexing.py  math.py  meshgrid.py  python.py  tensors.py
cassetta/io/: __init__.py  loadable.py  module.py  modules.py  optim.py  utils.py
cassetta/layers/: README.md  __init__.py  activations.py  attention.py  conv.py  convblocks.py  dropout.py  init.py  interpol.py  linear.py  misc.py  norm.py  simple.py  updown.py
cassetta/losses/: README.md  __init__.py  base.py  regression.py  segmentation.py
cassetta/metrics/: README.md  __init__.py  base.py
cassetta/models/: README.md  __init__.py  registration.py  segmentation.py
cassetta/optimizers/: __init__.py  adam.py  base.py
cassetta/tests/: test_loadable.py  test_tests.py
cassetta/training/: loggers.py  simple_trainer.py  trainers.py
docs/: index.md  install.md  requirements.txt
docs/_backup/_backbones/: unet.md
docs/_backup/_layers/: activations.md  convblocks.md  dropout.md  interpol.md  norm.md  updown.md
docs/api/: backbones.md  cassetta.md  core.md  functional.md  inference.md  io.md  layers.md  losses.md  metrics.md  models.md  training.md
docs/api/backbones/: fcn.md
docs/api/functional/: jit.md
docs/api/layers/: attention.md  conv.md  linear.md  simple.md
docs/examples/: supervised-finetuning.ipynb  supervised-segmentation.ipynb
docs/javascript/: mathjax.js
docs/stylesheets/: extra.css
tests/: trainer.py
