[metadata]
name = cassetta
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = A PyTorch toolbox
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/cassetta
    Homepage=https://github.com/balbasty/cassetta
    Issues=https://github.com/balbasty/cassetta/issues

[options]
python_requires = >= 3.8
install_requires =
    numpy
    torch>=2
    torch-bounds
    torch-interpol

[versioneer]
VCS = git
style = pep440
versionfile_source = cassetta/_version.py
versionfile_build = cassetta/_version.py
tag_prefix =
parentdir_prefix =
